added git ignore

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ footer { background: #412b45; }
                         <img src="images/forsmartphones.png" />
                         <p class="description">For Smartphone and Tablet Users</p>
                         <ul>
-                            <li class="music"><a href="//192.168.0.18/mpd.apk"></a></li>
+                            <li class="music"><a href="files/mpd.apk"></a></li>
                             <li class="video"><a href="//192.168.0.18:32400/web"></a></li>
                             <li class="files"><a href="//192.168.0.18/owncloud"></a></li>
                         </ul>
