--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>blackbox testing Home Page</title>
+<title>Blox</title>
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
 <style>
@@ -55,7 +55,7 @@ footer { background: #412b45; }
                     </strong>
                     or</br>
                     <strong>
-                        http://blackbox/
+                        http://blox/
                     </strong>
                 </span>
             </center>
@@ -98,9 +98,9 @@ footer { background: #412b45; }
                         <img src="images/fordesktop.png" />
                         <p class="description">For Desktop and Laptop Users</p>
                         <ul>
-                            <li class="music"><a href="//blackbox.local/mpd.apk"></a></li>
-                            <li class="video"><a href="//blackbox.local:32400/web"></a></li>
-                            <li class="files"><a href="//blackbox.local/owncloud"></a></li>
+                            <li class="music"><a href="//blox.local/mpd.apk"></a></li>
+                            <li class="video"><a href="//blox.local:32400/web"></a></li>
+                            <li class="files"><a href="//blox.local/owncloud"></a></li>
                         </ul>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6">
@@ -122,7 +122,7 @@ footer { background: #412b45; }
     <footer>
         <div class="container">
             <p class="text-center">A different home experience.
-           (c)2014</p>
+           Ⓒ2014</p>
         </div>
     </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
